Make sure user list action buttons don't jump to new lines

--- a/app/assets/stylesheets/user_list.scss
+++ b/app/assets/stylesheets/user_list.scss
@@ -1,3 +1,4 @@
 .user-row-actions {
   text-align: right;
+  white-space: nowrap;
 }
